--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BACKEND_BASE_URL = "https://studynotion-backend-be2f.onrender.com"
+# VITE_BACKEND_BASE_URL = "https://studynotion-backend-be2f.onrender.com"
+VITE_BACKEND_BASE_URL = "http://localhost:5050"
